--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <link rel="stylesheet" href="css/animate.css">
 <!--/css-->
 
-<script src="js/wow.min.js"></script>
+<script src="js/wow.js"></script>
 <script>
 new WOW({
   mobile: false//マホではアニメーションさせないようにする
