--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@ new WOW({
 
 <section>
 <div class="wow fadeInUp">アニメーションさせたい要素</div>
-<div class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="5s">
+<div class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="5s" style="width: 300px;height: 300px;background-color: #666;margin-bottom: 30px;">
   <p>上記例の1行目では、スクロールが要素に達してから5秒後に2秒かけてアニメーションを実行します。</p>
 </div>
-<div class="wow slideInRight" data-wow-offset="10"  data-wow-iteration="10"></div>
+<div class="wow slideInRight" data-wow-offset="10"  data-wow-iteration="10" style="width: 300px;height: 300px;background-color: #666;margin-bottom: 30px;"></div>
 <p>2行目では、スクロールが要素に達してからスクロール10を過ぎたらアニメーションを10回実行します。</p>
 </section>
 
