--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@ new WOW({
 
 <section>
 <div class="wow fadeInUp">アニメーションさせたい要素</div>
-<div class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="5s" style="width: 500px;height: 200px;background-color: #666;margin-bottom: 30px;">
+<div class="wow slideInLeft" data-wow-duration="1s" data-wow-delay="3s" style="width: 500px;height: 200px;background-color: #666;margin-bottom: 30px;">
   <p>上記例の1行目では、スクロールが要素に達してから2秒後に5秒かけてアニメーションを実行します。</p>
 </div>
-<div class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="5s" style="width: 500px;height: 200px;background-color: #666;margin-bottom: 30px;">
+<div class="wow slideInRight" data-wow-duration="2s" data-wow-delay="3s" style="width: 500px;height: 200px;background-color: #666;margin-bottom: 30px;">
 <p>2行目では、スクロールが要素に達してから2秒後に5秒かけてアニメーションを実行します。</p>
 </section>
 
